<resources>
    <string name="app_name">CompraApp</string>
    <string name="Eliminar_del_carrito">Eliminar del carrito</string>
    <string name="Confirmar_compra">Confirmar compra</string>
    <string name="Volver">Volver</string>
    <string name="Pecio_Total">PRECIO TOTAL</string>
    <string name="ircarritodecompras">Carrito de compras</string>
    <string name="ircompraconcretada">Compra concretada</string>
    <string name="Codigo_compra_concretada">Codigo de compra</string>
    <string name="Bottom_Codigo_compra_concretada">Finalizar</string>
    <string name="ComprApp">ComprApp</string>
    <string name="ModuloCliente">Modulo Cliente</string>
    <string name="ModuloVendedor">Modulo Vendedor</string>
    <string name="MantencionProductos">Mantención de productos</string>
    <string name="VendedorVentas">Ventas</string>
    <string name="TitleCarrito">Carrito de compras</string>
    <string name="CodigoDeCompra">Código de Compra:</string>
    <string name="CompraCode">Código</string>
    <string name="TitleMantencionDeProductos">Mantención de productos</string>
    <string name="BtnRegistrarProducto">Registrar producto</string>
    <string name="BtnEditarEliminarProd">Editar/Eliminar producto</string>
    <string name="BtnBuscarProductos">Buscar productos</string>
    <string name="TxtBusquedaDeProductos">Búsqueda de productos</string>
    <string name="btnAgregarAlCarrito">Agregar producto al carrito</string>
    <string name="ProductoABuscar">Producto</string>
    <string name="txtVentas">Ventas</string>
    <string name="btnConfirmarVenta">Confirmar venta</string>
    <string name="txtRegistrarProducto">Registrar producto</string>
    <string name="ProductoNombre">Nombre</string>
    <string name="ProductoStock">Stock</string>
    <string name="ProductoTipo">Tipo</string>
    <string name="ProductoPrecio">Precio</string>
    <string name="RegistrarProducto">Publicar producto</string>
    <string name="RegistrarVolver">Volver</string>
    <string name="txtEditarEliminarProducto">Editar/eliminar producto</string>
    <string name="EditarProducto">Editar producto</string>
    <string name="EliminarProducto">Eliminar producto</string>
    <string name="EditarVolver">Volver</string>
    <string name="txtVentaConcretada">Concretar venta</string>
    <string name="txtCodigoVenta">Codigo de venta:</string>
    <string name="CodigoVenta">Código</string>
    <string name="ConcretarVentaFinalizar">Finalizar</string>
    <string name="txtCarritoDeCompras">Carrito de compras</string>
    <string name="ProdCodigo">Código de barra</string>
    <string name="btnBuscar">Buscar</string>
    <string name="txtusuario">Usuario</string>
    <string name="txtcontraseña">Contraseña</string>
    <string name="iniciosesion">Inicio sesión</string>
    <string name="rutusuario">Rut</string>
    <string name="nombreusuario">Nombre</string>
    <string name="apellidousuario">Apellido</string>
    <string name="telefonousuario">Telefono</string>
    <string name="RegistroUsuario">Registro</string>
    <string name="btn_registro">Registrar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="iniciarsesion">Iniciar sesión</string>
</resources>